# Eve

./: CMakeLists.txt  main.cpp
Arithmetic/: BigInt.cpp  BigInt.h  EllipticCurve.cpp  EllipticCurve.h  GaloisField.cpp  GaloisField.h  Modulus.h  Point.cpp  Point.h  utils.h
Encryption/: ECIH.cpp  ECIH.h  EllipticCurveEnc.cpp  EllipticCurveEnc.h  GaloisField.h
Network/: Client.cpp  Client.h  Server.cpp  Server.h  SocketAdam.cpp  SocketAdam.h
